<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/group_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/logo_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Enter card details"
                    android:textColor="@color/white"
                    android:textSize="@dimen/material_baseline_grid_3x"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:title="Collect Card Info" />

                </com.google.android.material.appbar.AppBarLayout>


                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/material_baseline_grid_2x" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/material_baseline_grid_2x" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/material_baseline_grid_2x"
                    app:layout_constraintBottom_toTopOf="@+id/card_number_layout"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintVertical_chainStyle="packed">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameOnCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/collect_card_name_on_card"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_number_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
                    app:layout_constraintBottom_toTopOf="@+id/swkdkowkd"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/card_name_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cardnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/collect_card_number"
                        android:inputType="number"
                        android:maxLength="16"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/swkdkowkd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/card_cvv_layout"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/card_number_layout">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/card_expiry_month_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_baseline_grid_1x">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/expiry_month"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/collect_card_expiry_month"
                                android:inputType="number"
                                android:maxLength="2"
                                android:clickable="false"
                                android:focusable="false"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/layoutmonth"
                            android:layout_centerInParent="true"
                            android:layout_height="50dp"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/card_expiry_year_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/material_baseline_grid_1x"
                            >

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/expiry_year"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/collect_card_expiry_year"
                                android:inputType="number"
                                android:maxLength="2"
                                android:clickable="false"
                                android:focusable="false"
                                android:singleLine="true" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:id="@+id/layoutyear"
                            android:layout_centerInParent="true"
                            android:layout_height="50dp"/>
                    </RelativeLayout>

                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_cvv_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/material_baseline_grid_1x"
                    app:layout_constraintBottom_toTopOf="@+id/lay"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/swkdkowkd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/collect_card_cvv"
                        android:inputType="number"
                        android:maxLength="4"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="@dimen/material_baseline_grid_3x"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/card_cvv_layout">



                    <Button
                        android:id="@+id/cancel_button"
                        style="@style/SimpleButton"
                        android:layout_margin="6dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/custombutton"
                        android:enabled="true"
                        android:text="Cancel"
                        />
                    <Button
                        android:id="@+id/submit_button"
                        style="@style/SimpleButton"
                        android:layout_width="0dp"
                        android:layout_margin="6dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_selector_main"
                        android:enabled="false"
                        android:text="@string/collect_card_continue"
                        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                        app:layout_constraintStart_toStartOf="@+id/guideline_start"
                        app:layout_constraintTop_toBottomOf="@+id/card_cvv_layout" />



                </LinearLayout>


                <TextView
                    android:id="@+id/or_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/collect_card_or"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@+id/google_pay_button"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/lay"
                    tools:visibility="visible" />


                <include
                    android:id="@+id/google_pay_button"
                    layout="@layout/googlepay_button"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/material_baseline_grid_6x"
                    android:layout_marginBottom="@dimen/material_baseline_grid_2x"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_end"
                    app:layout_constraintStart_toStartOf="@+id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@+id/or_separator"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>


</layout>